# open-pdd

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  common.rs  errors.rs  lib.rs  utils.rs
src/http/: mod.rs  request.rs  response.rs
src/http/model/: mod.rs
src/http/model/ad/: mod.rs  pdd_ad_api_advertiser_open_account.rs  pdd_ad_api_advertiser_query_account_balance.rs  pdd_ad_api_advertiser_query_account_info.rs  pdd_ad_api_advertiser_query_detail.rs  pdd_ad_api_goods_query_gallery_images.rs  pdd_ad_api_goods_query_long_images.rs  pdd_ad_api_goods_query_page.rs  pdd_ad_api_keyword_create.rs  pdd_ad_api_keyword_delete.rs  pdd_ad_api_keyword_query_list.rs  pdd_ad_api_keyword_recommend_get.rs  pdd_ad_api_keyword_relevance_get.rs  pdd_ad_api_keyword_update.rs  pdd_ad_api_plan_create.rs  pdd_ad_api_plan_delete.rs  pdd_ad_api_plan_query_can_create_ad_plan.rs  pdd_ad_api_plan_query_can_update_max_cost.rs  pdd_ad_api_plan_query_list.rs  pdd_ad_api_plan_update_data_operate_status.rs  pdd_ad_api_plan_update_max_cost.rs  pdd_ad_api_plan_update_plan_discount.rs  pdd_ad_api_plan_update_plan_name.rs  pdd_ad_api_plan_update_plan_to_ocpc.rs  pdd_ad_api_report_activity_report_query.rs  pdd_ad_api_report_daily_report_query.rs  pdd_ad_api_report_entity_report_query.rs  pdd_ad_api_report_hourly_report_query.rs  pdd_ad_api_report_tr_daily_report_query.rs  pdd_ad_api_report_tr_hourly_report_query.rs  pdd_ad_api_unit_bid_delete.rs  pdd_ad_api_unit_bid_query_base_location_profile.rs  pdd_ad_api_unit_bid_query_base_target_profile.rs  pdd_ad_api_unit_bid_query_list.rs  pdd_ad_api_unit_bid_query_targeting_tag_list.rs  pdd_ad_api_unit_bid_sync.rs  (+27 more)
(+304 files in other folders)
